# qsb-did-resolver

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: did.rs  document.rs  error.rs  lib.rs  resolver.rs  rpc.rs
server/: Cargo.toml
server/src/: main.rs
